--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,25 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.6.8",
-        "laravel/framework": "^10.10",
-        "laravel/jetstream": "^3.2",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0"
+        "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.7",
+        "inertiajs/inertia-laravel": "^0.6.9",
+        "juststeveking/launchpad": "dev-main",
+        "laravel/framework": "^10.13.5",
+        "laravel/jetstream": "^3.2.2",
+        "laravel/sanctum": "^3.2.5",
+        "laravel/tinker": "^2.8.1",
+        "tightenco/ziggy": "^1.6"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "pestphp/pest": "^2.0",
+        "fakerphp/faker": "^1.23.0",
+        "laravel/pint": "^1.10.2",
+        "laravel/sail": "^1.22",
+        "mockery/mockery": "^1.6.2",
+        "nunomaduro/collision": "^7.6",
+        "pestphp/pest": "^2.8",
         "pestphp/pest-plugin-laravel": "^2.0",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.1.3"
     },
     "autoload": {
         "psr-4": {
@@ -65,6 +66,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
