--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sail": "^1.22",
         "mockery/mockery": "^1.6.2",
         "nunomaduro/collision": "^7.6",
+        "nunomaduro/larastan": "^2.6",
         "pestphp/pest": "^2.8",
         "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ignition": "^2.1.3"
