--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
         ],
         "stan": [
           "./vendor/bin/phpstan analyse --memory-limit=3g"
+        ],
+        "test": [
+          "@php artisan test"
         ]
     },
     "extra": {
